[project]
name = "eia-cisco-client-discovery"
version = "0.1.0"
description = "EIA Cisco Client Discovery Utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "netmiko>=4.6.0",
    "ntc-templates>=8.1.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
